[tool.poetry]
name = "quantum-robustness"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "quantum_robustness"}]



[tool.poetry.dependencies]
python = "3.11.*"
qiskit = "0.45.1"
qiskit-aer = "^0.13.1"
matplotlib = "^3.8.2"
pylatexenc = "^2.10"
qiskit-terra = "^0.45.1"
qiskit-algorithms = "^0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
